--- a/product-page.html
+++ b/product-page.html
@@ -186,14 +186,14 @@
                 </div>
                 <div class="col">
                     <div class="d-flex justify-content-end">
-                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0" alt="...">
+                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
             </div>
             <div class="row py-4">
                 <div class="col">
                     <div class="d-flex justify-content-start">
-                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0" alt="...">
+                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
                 <div class="col">
@@ -216,14 +216,14 @@
                 </div>
                 <div class="col">
                     <div class="d-flex justify-content-end">
-                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0" alt="...">
+                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
             </div>
             <div class="row py-4">
                 <div class="col">
                     <div class="d-flex justify-content-start">
-                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0" alt="...">
+                        <img src="https://placehold.co/400x300/FDD1CB/white" class="rounded-0 img-fluid" alt="...">
                     </div>
                 </div>
                 <div class="col">
